--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ google-auth==2.37.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.8.3
 googleapis-common-protos==1.66.0
+gunicorn==23.0.0
 grpcio==1.68.1
 grpcio-status==1.68.1
 h11==0.14.0
